--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch ./sass/main.scss:./style.css --no-source-map"
+    "sass": "sass --watch ./sass/main.scss:./style.css --no-source-map",
+    "prefix": "postcss ./style.css --use autoprefixer -d ./prefixed/"
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "browserslist": "last 4 versions"
 }
